--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>cjndjcnjdcndjcnjdsncsj</h1>
+        <h1 id="h1-tag">cjndjcnjdcndjcnjdsncsj</h1>
 
         <ul>
             <li>efff</li>
