--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -19,6 +19,15 @@
     </header>
 
 
+    <main>
+        <ul>
+            <li class="list-items">abc</li>
+            <li class="list-items">def</li>
+            <li class="list-items">ghi</li>
+            <li class="list-items">jkl</li>
+        </ul>
+    </main>
+
 
     <script src="./script.js"></script>
 </body>
