--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -26,6 +26,8 @@
             <li class="list-items">ghi</li>
             <li class="list-items">jkl</li>
         </ul>
+
+        <h2 id="h2-tag">changing texts</h2>
     </main>
 
 
