--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -28,6 +28,9 @@
         </ul>
 
         <h2 id="h2-tag">changing texts</h2>
+
+
+        <h3 id="h3-tag">Changing Color By js</h3>
     </main>
 
 
