--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -8,31 +8,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <h1 id="h1-tag">cjndjcnjdcndjcnjdsncsj</h1>
+    <!--*heading tag -->
+    <h1>amar sonar bangla</h1>
+    <h3>ami tomay valobashi</h3>
 
-        <ul>
-            <li>efff</li>
-            <li>dcdcdc</li>
-            <li>dccdcdcd</li>
-        </ul>
-    </header>
+    <!-- list itmes: 1 -->
+    <ul>
+        <li>chirodin</li>
+        <li>tomar akash</li>
+        <li>tomar batash</li>
+    </ul>
 
+    <!-- list items: 2 -->
+    <ul>
+        <li>chirodin</li>
+        <li>tomar akash</li>
+        <li>tomar batash</li>
+    </ul>
 
-    <main>
-        <ul>
-            <li class="list-items">abc</li>
-            <li class="list-items">def</li>
-            <li class="list-items">ghi</li>
-            <li class="list-items">jkl</li>
-        </ul>
+    <!-- list items: 3 -->
+    <ul>
+        <li>chirodin</li>
+        <li>tomar akash</li>
+        <li>tomar batash</li>
+    </ul>
 
-        <h2 id="h2-tag">changing texts</h2>
-
-
-        <h3 id="h3-tag">Changing Color By js</h3>
-    </main>
-
+    <!-- paragraphs -->
+    <p>amar prane....oma amar prane bajay bashi</p>
+    <p>sonar banagla ami tomay valobashi e e e eeee</p>
 
     <script src="./script.js"></script>
 </body>
