--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <!--*heading tag -->
-    <h1>amar sonar bangla</h1>
-    <h3>ami tomay valobashi</h3>
+    <h1 id="heading-1">amar sonar bangla</h1>
+    <h3 class="heading-2">ami tomay valobashi</h3>
+    <h3 class="heading-2">fui fu fu fooo fu fu</h3>
 
     <!-- list itmes: 1 -->
     <ul>
@@ -33,7 +34,7 @@
         <li>tomar batash</li>
     </ul>
 
-    <!-- paragraphs -->
+    <!-- paragraphs part -->
     <p>amar prane....oma amar prane bajay bashi</p>
     <p>sonar banagla ami tomay valobashi e e e eeee</p>
 
