--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -12,6 +12,7 @@
     <h1 id="heading-1">amar sonar bangla</h1>
     <h3 class="heading-2">ami tomay valobashi</h3>
     <h3 class="heading-2">fui fu fu fooo fu fu</h3>
+    <h4 class="heading-3">tut tut tu tu tuuuu</h4>
 
     <!-- list itmes: 1 -->
     <ul>
