--- a/js-dom-practice-1.js/index.html
+++ b/js-dom-practice-1.js/index.html
@@ -12,7 +12,9 @@
     <h1 id="heading-1">amar sonar bangla</h1>
     <h3 class="heading-2">ami tomay valobashi</h3>
     <h3 class="heading-2">fui fu fu fooo fu fu</h3>
-    <h4 class="heading-3">tut tut tu tu tuuuu</h4>
+    <h4 class="heading-3">tut tut tu tu tuuuu12</h4>
+    <h5 class="heading-3">tut tut tu tu tuuuu</h5>
+    <h6 class="heading-3">tut tut tu tu tuuuu3</h6>
 
     <!-- list itmes: 1 -->
     <ul>
