--- a/js-dom-practice-2/index.html
+++ b/js-dom-practice-2/index.html
@@ -6,8 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <!-- headline: 1 -->
+        <h1>emon desh ti</h1>
 
+        <!-- paragraphs -->
+        <p>kothaw khuje pabe nako tumi.....</p>
+        <p>sokol desher rani se je amar jonmo vumi....</p>
+
+        <!-- list items: 1 -->
+        <ul>
+            <li>se je amar jonmo vumi...</li>
+            <li>se je amar...jonmo vumi</li>
+        </ul>
+    </header>
 
     
     <!-- js file -->
