--- a/js-dom-practice-2/index.html
+++ b/js-dom-practice-2/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <!-- headline: 1 -->
-        <h1>emon desh ti</h1>
+        <h1 class="heading-tag-1">emon desh ti</h1>
 
         <!-- paragraphs -->
         <p>kothaw khuje pabe nako tumi.....</p>
