--- a/js-dom-practice-2/innerHtml.html
+++ b/js-dom-practice-2/innerHtml.html
@@ -22,23 +22,7 @@
         </ul>
     </header>
 
-    <main>
-        <!-- paragraphs -->
-        <p>dhono dhanno pushpe vora</p>
-        <p>amader ei boshundhora</p>
-
-        <!-- list items: 2 -->
-        <ul>
-            <li>tahar maje ache je ak</li>
-            <li>sokol desher sera...</li>
-        </ul>
-
-        <h3>ohe sopno diye toiri se desh</h3>
-        <h4>sriti diye ghera....</h4>
-    </main>
-
-    
     <!-- js file -->
-     <script src="./script.js"></script>
+     <script src="./inner-html-practice.js"></script>
 </body>
 </html>
