--- a/js-dom-practice-2/innerHtml.html
+++ b/js-dom-practice-2/innerHtml.html
@@ -8,12 +8,11 @@
 <body>
     <header>
         <!-- headline: 1 -->
-        <h1 id="heading-1">emon <span>desh</span> ti</h1>
-
+        <h1 class="heading-1">emon <span>desh</span> ti</h1>
 
         <!-- paragraphs -->
-        <p>kothaw khuje pabe nako tumi.....</p>
-        <p>sokol desher rani se je amar jonmo vumi....</p>
+        <p class="paragraph-1">kothaw khuje pabe nako tumi.....</p>
+        <p class="paragraph-1">sokol desher rani se je amar jonmo vumi....</p>
 
         <!-- list items: 1 -->
         <ul>
