--- a/js-dom-practice-2/innerHtml.html
+++ b/js-dom-practice-2/innerHtml.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <header>
-        <!-- headline: 1 -->
+        <!-- headlines-->
         <h1 class="heading-1">emon <span>desh</span> ti</h1>
+        <h1 class="heading-2">emon <span>desh</span> ti</h1>
 
         <!-- paragraphs -->
         <p class="paragraph-1">kothaw khuje pabe nako tumi.....</p>
