--- a/js-dom-practice-2/innerHtml.html
+++ b/js-dom-practice-2/innerHtml.html
@@ -12,16 +12,16 @@
         <h1 class="heading-2">emon <span>desh</span> ti</h1>
 
         <!-- paragraphs -->
-        <p class="paragraph-1">kothaw khuje pabe nako tumi.....</p>
-        <p class="paragraph-1">sokol desher rani se je amar jonmo vumi....</p>
-
+         <p class="paragraph-1">sokol desher rani se je amar jonmo vumi....</p>
+        <p class="paragraph-2">kothaw khuje <span>pabe nako tumi</span>.....</p>
+        
         <!-- list items: 1 -->
         <ul>
             <li>se je amar jonmo vumi...</li>
             <li>se je amar...jonmo vumi</li>
         </ul>
     </header>
-llllll
+
     <!-- js file -->
      <script src="./inner-html-practice.js"></script>
 </body>
