--- a/js-dom-practice-2/innerText.html
+++ b/js-dom-practice-2/innerText.html
@@ -9,7 +9,7 @@
     <header>
         <!-- headlines-->
         <h1 class="heading-1">emon <span>desh</span> ti</h1>
-        <h1 class="heading-2">emon desh ti</h1>
+        <h1 id="heading-2">emon desh ti</h1>
 
         <!-- paragraphs -->
          <p class="paragraph-1">sokol desher rani se je amar jonmo vumi....</p>
