--- a/js-dom-practice-2/style-cssText.html
+++ b/js-dom-practice-2/style-cssText.html
@@ -6,7 +6,31 @@
     <title>Document</title>
 </head>
 <body>
-    
+      <header>
+        <!--*box: 1 -->
+        <div class="box">
+            <h1>box model</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, fugiat.</p>
+
+            <button>Click Here</button>
+        </div>
+
+        <!--*box: 2 -->
+        <div class="box">
+            <h1>box model</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, fugiat.</p>
+
+            <button>Click Here</button>
+        </div>
+
+        <!--*box: 3 -->
+        <div class="box">
+            <h1>box model</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam, fugiat.</p>
+
+            <button>Click Here</button>
+        </div>
+    </header>
 
 
 
